httpbin-kubernetes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpbin-v1
      version: v1
  template:
    metadata:
      labels:
        app: httpbin-v1
        version: v1
    spec:
      containers:
      - name: httpbin-v1
        image: mccutchen/go-httpbin
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpbin-v2
      version: v2
  template:
    metadata:
      labels:
        app: httpbin-v2
        version: v2
    spec:
      containers:
      - name: httpbin-v2
        image: mccutchen/go-httpbin
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-v1-service
spec:
  selector:
    app: httpbin-v1
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-v2-service
spec:
  selector:
    app: httpbin-v2
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: httpbin-v1-service
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: httpbin-v2-service
            port:
              number: 80
